--- a/website/business/biz.html
+++ b/website/business/biz.html
@@ -9,15 +9,32 @@
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <h2 class="text-shadow">
+    <body class="text-shadow">
+      <h3>
         Business
-      </h2>
-      <p class="text-shadow" style="font-size: larger;">
+      </h3>
+      <p>
         This is an outline of a potential business navigation structure:
       </p>
 
-      <ul class="text-shadow">
+      <ul>
+        <li>
+          <abbr title="Recycle City Movement">
+            RCM
+          </abbr>
+          Mission
+        </li>
+        <ul>
+          <li>
+            <a href="../mission/charter.html" target="main-content">charter</a>
+          </li>
+          <li>
+            <a href="../mission/biz-plan.html" target="main-content"
+              >business plan</a
+            >
+          </li>
+          <p></p>
+        </ul>
         <li>Charity Fund</li>
         <ul>
           <li>Bank Statements</li>
