--- a/website/community/contract/community-biz-plan.html
+++ b/website/community/contract/community-biz-plan.html
@@ -2,31 +2,17 @@
     This is the RCM Business Plan. The plan describes how the business wishes to develop.
 -->
 <head>
-  <title>RCM Development Pain</title>
+  <title>Community Business Plan</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../../css/styles.css" />
   <base href="." target="_blank" />
 </head>
 
-<body>
-  <div class="header">
-
-    <img src="../../img/RCM-symbol/RCM-symbol.png" alt="The RCM Logo"
-    style="float:left; width:100px; height:80px; padding-right:20px" />
-    <h1>
-      Recycle City Movement
-    </h1>
-  </div>
-
-  <div class="text-shadow" style="font-size: larger">
-    <h2>
-      The Community Business Plan
-    </h2>
-
-    <h3>
-      Goal and Motivation
-    </h3>
+<body class="text-shadow">
+  <div>
+    <h2>The Community Business Plan</h2>
+    <h3>Goal and Motivation</h3>
 
     <p>
       Create a non-profit organization of the highest moral integrity.
@@ -36,12 +22,12 @@
       and a recycling charity fund.
     </p>
 
-    <h3>
-      Non-Profit Organization
-    </h3>
+    <h3>Non-Profit Organization</h3>
 
     <p>
-      The community uses the RCM community website template to create
+      The community uses the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      community website template to create
       its own non-profit website. The website enables the community to share
       with the greater population. The community charter and community business plan
       are published on the website, the community's member profiles are shared,
@@ -66,16 +52,14 @@
       Now, there is still chicken-manure compost that is continuing to pile up.
       The community posts on its non-profit website that a measure of
       chicken-manure compost is available.
-      The population has a need for the chicken-manure composts and
+      The population has a need for the chicken-manure compost and
       requests a quantity of the compost.
       The community agrees to the request, and arraignments, such as a schedule,
       are made for the delivery or pick-up of
       the compost by the requester at the requester's expense.
     </p>
 
-    <h3>
-      Operation
-    </h3>
+    <h3>Operation</h3>
     
     <p>
       Dealings are open and transparent. For example, community meetings
@@ -83,30 +67,27 @@
       such as project plans, are visible from their website.
     </p>
 
-    <h3>
-      Labor And Finance
-    </h3>
+    <h3>Labor And Finance</h3>
 
     <p>
-      The community business' authority structure is non-hierarchical, 
+      The community business's authority structure is non-hierarchical, 
       where each member has equal status and empowerment with the exception of
       the community's finances. The community has three elected financial officers
       who as a unit manage the unity and charity funds.
       The community performs financial officer elections every six months from
-      a candidates nominated or volunteered from the community.
+      a pool of nominated or volunteered candidates made from the community.
     </p>
 
     <p></p>
       Financial transactions are open and transparent.
       For example, the unity and charity fund bank statements are posted
-      on the RCM website on a monthly basis.
-
+      on the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      website on a monthly basis.
       Each member receives an equal unity fund distribution as indicated previously.
     </p>
 
-    <h3>
-      Reproducible Model
-    </h3>
+    <h3>Reproducible Model</h3>
 
     <p>
       The community business model is reproducible by others.
@@ -115,9 +96,7 @@
       are documented with the website.
     </p>
 
-    <h3>
-      Technology
-    </h3>
+    <h3>Technology</h3>
 
     <p>
       Promote the use and improvement of recycling technology by documenting
@@ -127,9 +106,7 @@
       and responsibly with the ecosystem.
     </p>
 
-    <h3>
-      Democracy
-    </h3>
+    <h3>Democracy</h3>
     
     <p>
       The business organization control is done by elections and propositions.
