--- a/website/community/contract/community-charter.html
+++ b/website/community/contract/community-charter.html
@@ -2,51 +2,29 @@
     This is the RCM Charter. The charter defines the business purpose and philosophy.
 -->
 <head>
-  <title>RCM Development Pain</title>
+  <title>RCM Charter</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../../css/styles.css" />
   <base href="." target="_blank" />
 </head>
 
-<body>
-  <div class="header">
-    <img src="../../img/RCM-symbol/RCM-symbol.png" alt="The RCM Logo"
-    style="float:left; width:100px; height:80px; padding-right:20px" />
-    <h1>
-      Recycle City Movement
-    </h1>
-  </div>
-
-  <div class="text-shadow" style="font-size: larger">
-    <h3>
-      The Recycle City Movement Community Charter
-    </h3>
+<body  class="text-shadow">
+  <div>
+    <h3>The Recycle City Movement Community Charter</h3>
     
     <p>
       The purpose of this charter is to define the goals, philosophy and moral center of the community:
-      _________________________________________________________________________________, which is here-on-in referred to as community.
+      _________________________________________________________________________________,
+      which is here-on-in referred to as community.
     </p>
 
-    <h3>
-      Goals Of The Community
-    </h3>
+    <h3>Goals Of The Community</h3>
+    <h3>Establish A Unity Trust Fund</h3>
 
-    <h3>
-      Establish A Unity Trust Fund
-    </h3>
-
-    <p>
-      Create and sustain a unity trust und which is solely used to support the community and its members.
-    </p>
-
-    <p>
-      This charter prioritizes the unity fund distribution in two levels.
-    </p>
-
-    <p>
-      The first priority: Expenses of the community are to be covered.
-    </p>
+    <p>Create and sustain a unity trust und which is solely used to support the community and its members.</p>
+    <p>This charter prioritizes the unity fund distribution in two levels.</p>
+    <p>The first priority: Expenses of the community are to be covered.</p>
 
     <p>
       The second priority: Support community members.
@@ -59,9 +37,7 @@
       is published, on a monthly basis, onto the community's website.
     </p>
 
-    <h3>
-      Establish A Non-profit Organization
-    </h3>
+    <h3>Establish A Non-profit Organization</h3>
 
     <p>
       The community agrees to establish a non-profit organization that serves
@@ -69,7 +45,9 @@
     </p>
 
     <h3>
-      Establish A Non-profit RCM Charity Fund
+      Establish A Non-profit
+      <abbr title="Recycle City Movement">RCM</abbr>
+      Charity Fund
     </h3>
 
     <p>
@@ -78,27 +56,14 @@
       and other donation channels. On the community's website,
       the non-profit's recycling related information is shared:
       <ul>
-        <li>
-          the recycling technology that is used,
-        </li>
-
-        <li>
-          any recycled products that are created,
-        </li>
-          
-        <li>
-          the community's plan for improving its recycling efforts and products,
-        </li>
-
-        <li>
-          and the charity fund's bank statement.
-        </li>
+        <li>the recycling technology that is used,</li>
+        <li>any recycled products that are created,</li>
+        <li>the community's plan for improving its recycling efforts and products,</li>
+        <li>and the charity fund's bank statement.</li>
       </ul>
     </p>
 
-    <h3>
-      Share Community Recycled Products
-    </h3>
+    <h3>Share Community Recycled Products</h3>
 
     <p>
       The community agrees to freely donate to third-party entities any recycled products
@@ -112,9 +77,7 @@
       These costs are posted on the website with the product availability.
     </p>
 
-    <h3>
-      Definition Of A Community
-    </h3>
+    <h3>Definition Of A Community</h3>
 
     <p>
       A location made with people, animals and things, where the people live
@@ -123,10 +86,7 @@
       the pursuit of happiness, and the desires to give, grow, and share.
     </p>
 
-
-    <h3>
-      Joining The Community
-    </h3>
+    <h3>Joining The Community</h3>
 
     <p>
       If the community is in a growth state, the new community members
@@ -147,14 +107,13 @@
       what jobs they wish to take on, and how they will spend their time.
     </p>
 
-    <h3>
-      Open And Transparent
-    </h3>
+    <h3>Open And Transparent</h3>
 
     <p>
       The community seeks to make its operations open and transparent to the greater population.
       Thus financial records of the community's unity fund and the community's
-      RCM charity fund are published
+      <abbr title="Recycle City Movement">RCM</abbr>
+      charity fund are published
       on the community's website in the form of their monthly bank statement.
       The community's website's source code remains published on GitHub.com or another
       open-source development website.
@@ -164,9 +123,7 @@
       and recycled product availability on the community's website.
     </p>
 
-    <h3>
-      Lawful Consideration
-    </h3>
+    <h3>Lawful Consideration</h3>
 
     <p>
       Staying within the boundaries set by lawful entities is a primary concern of every
@@ -177,9 +134,7 @@
       for its actions.
     </p>
 
-    <h3>
-      Community Philosophy
-    </h3>
+    <h3>Community Philosophy</h3>
 
     <p>
       The community actively promotes a philosophy where members recognize in one another
@@ -196,100 +151,62 @@
     </p>
 
     <p>
-      RCM agrees to the funding arrangement as defined to in the appended fund arrangement contract.
+      <abbr title="Recycle City Movement">RCM</abbr>
+      agrees to the funding arrangement as defined to in the appended fund arrangement contract.
     </p>
 
+    <p>Responsible Community members,</p>
+
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
+
     <p>
-      Responsible Community members,
+      Responsible
+      <abbr title="Recycle City Movement">RCM</abbr>
+      members,
     </p>
 
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
+
+    <h3>Appended Fund Arrangement Contract</h3>
 
     <p>
-      ________________________________________________, date signed: ______________,
-    </p>
-
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
-
-    <p>
-      Responsible RCM members,
-    </p>
-
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
-
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
-
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
-
-    <h3>
-      Appended Fund Arrangement Contract
-    </h3>
-
-    <p>
-      RCM agrees to provide the community with an amount of _______________________________
+      <abbr title="Recycle City Movement">RCM</abbr>
+      agrees to provide the community with an amount of _______________________________
       as part of the community's foundation which includes the purchase of these physical assets:
     </p>
 
-    <p>
-      _________________________________________________________________________________________________________________
-    </p>
+    <p>_________________________________________________________________________________________________________________</p>
+    <p>_________________________________________________________________________________________________________________</p>
+    <p>_________________________________________________________________________________________________________________</p>
 
     <p>
-      _________________________________________________________________________________________________________________
-    </p>
-    <p>
-      _________________________________________________________________________________________________________________
-    </p>
-    <p>
-      _________________________________________________________________________________________________________________
-    </p>
-
-   <p>
-     RCM agrees to provide the community continued financial support through cyclical
-     monetary distributions as described in the RCM Charter at the sole discretion
-     of the RCM board of directors.
-   </p>
-
-   <p>
-     Responsible Community members,
-   </p>
-
-    <p>
-      ________________________________________________, date signed: ______________,
+      <abbr title="Recycle City Movement">RCM</abbr>
+      agrees to provide the community continued financial support through cyclical
+      monetary distributions as described in the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      Charter at the sole discretion of the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      board of directors.
     </p>
 
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
+    <p>Responsible Community members,</p>
+
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
 
     <p>
-      ________________________________________________, date signed: ______________,
+      Responsible
+      <abbr title="Recycle City Movement">RCM</abbr>      
+      members,
     </p>
 
-    <p>
-      Responsible RCM members,
-    </p>
-
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
-
-    <p>
-       ________________________________________________, date signed: ______________,
-    </p>
-
-    <p>
-      ________________________________________________, date signed: ______________,
-    </p>
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
+    <p>________________________________________________, date signed: ______________,</p>
   </body>
 </html>
