--- a/website/connections/connections.html
+++ b/website/connections/connections.html
@@ -9,13 +9,9 @@
       <base href="." target="_blank" />
     </head>
 
-    <body class="text-shadow" style="font-size: larger;">
-      <h3>
-        Connections
-      </h3>
-      <p>
-        This is an outline of a potential structure for connections:
-      </p>
+    <body class="text-shadow">
+      <h3>Connections</h3>
+      <p>This is an outline of a potential structure for connections:</p>
       <p>Connect with others:</p>
       <ul>
         <li>Links to external resources</li>
