--- a/website/forum/forum.html
+++ b/website/forum/forum.html
@@ -9,15 +9,11 @@
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <h2 class="text-shadow">
-        Forum
-      </h2>
-      <p class="text-shadow" style="font-size: larger;">
-        This is an outline of a potential forum structure:
-      </p>
+    <body class="text-shadow">
+      <h2>Forum</h2>
+      <p>This is an outline of a potential forum structure:</p>
 
-      <ul class="text-shadow">
+      <ul>
         <li>Community Related</li>
         <ul>
           <li>Ideas</li>
@@ -46,9 +42,15 @@
           <p></p>
         </ul>
 
-        <li>RCM Related</li>
+        <li>
+          <abbr title="Recycle City Movement">RCM</abbr>
+          Related
+        </li>
         <ul>
-          <li>RCM Ideas</li>
+          <li>
+            <abbr title="Recycle City Movement">RCM</abbr>
+            Ideas
+          </li>
           <li>Problem-solving</li>
         </ul>
       </ul>
