--- a/website/members/members.html
+++ b/website/members/members.html
@@ -9,10 +9,8 @@
       <base href="." target="_blank" />
     </head>
 
-    <body class="text-shadow" style="font-size: larger;">
-      <h3>
-        Members
-      </h3>
+    <body class="text-shadow">
+      <h3>Members</h3>
       <p>This is a potential structure for the members page.</p>
       <ul>
         <li>Log-in / Register</li>
