--- a/website/mission/biz-plan.html
+++ b/website/mission/biz-plan.html
@@ -10,15 +10,7 @@
 </head>
 
 <body>
-  <div class="header">
-    <img src="../img/RCM-symbol/RCM-symbol.png" alt="The RCM Logo"
-    style="float:left; width:100px; height:80px; padding-right:20px" />
-    <h1>
-      Recycle City Movement
-    </h1>
-  </div>
-
-  <div class="text-shadow" style="font-size: larger">
+  <div class="text-shadow">
     <h2>
       The Recycle City Movement Business Plan
     </h2>
@@ -31,7 +23,9 @@
       Create an non-profit organization of the highest moral integrity.
       Improve the lives of everyone through self-empowerment. Sponsor the
       initial creation of communities, which are themselves non-profit organizations,
-      that follow the RCM community business charter and plan.
+      that follow the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      community business charter and plan.
       Continue to sustain these communities
       through monthly and quarterly payouts.
     </p>
@@ -62,7 +56,9 @@
 
     <p>
       Financial transactions are open and transparent. For example,
-      the charity fund bank statement is posted on the RCM website on a monthly basis.
+      the charity fund bank statement is posted on the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      website on a monthly basis.
     </p>
 
     <h3>
@@ -80,7 +76,9 @@
     </h3>
 
     <p>
-      The business's only assets are the RCM website and its charity fund bank account.
+      The business's only assets are the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      website and its charity fund bank account.
     </p>
 
     <h3>
@@ -108,7 +106,9 @@
     <p>
       The organization control is done by elections and propositions.
       Members earn the right to vote by their commitment, that is to say by volunteering,
-      and by their financial support of the RCM Charity Fund.
+      and by their financial support of the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      charity fund.
       How the business operates is in the hands of the volunteers and the fund supporters.
     </p>
   </div>
