--- a/website/proposals/proposals.html
+++ b/website/proposals/proposals.html
@@ -9,21 +9,15 @@
       <base href="." target="_blank" />
     </head>
 
-    <body class="text-shadow" style="font-size: larger;">
-      <h3>
-        Proposals
-      </h3>
-      <p>
-        There are different kinds of proposals that members can create:
-      </p>
+    <body class="text-shadow">
+      <h3>Proposals</h3>
+      <p>There are different kinds of proposals that members can create:</p>
       <ul>
         <li>a new community</li>
         <li>a charity fund donation</li>
         <li>a change to a business document or process</li>
       </ul>
-      <p>
-        Proposals go through phases:
-      </p>
+      <p>Proposals go through phases:</p>
       <ul>
         <li>
           During the first week a proposal is classified as a new proposal.
