--- a/website/technology/tech.html
+++ b/website/technology/tech.html
@@ -9,7 +9,7 @@
       <base href="." target="_blank" />
     </head>
 
-    <body class="text-shadow" style="font-size: larger;">
+    <body class="text-shadow">
       <div>
         <div>
           <img
