--- a/website/business/terms-and-conditions.html
+++ b/website/business/terms-and-conditions.html
@@ -8,8 +8,16 @@
   <body class="text-shadow">
     <h3>Terms And Conditions</h3>
     <p>
-      This document will describe the terms and conditions of using the RCM
+      This document will describe the terms and conditions of using the
+      <abbr title="Recycle City Movement">RCM</abbr>
       website.
+    </p>
+    <h4>The Active Status</h4>
+    <p>
+      In order to remain on the active status, a member must sign-in or be
+      logged to the
+      <abbr title="Recycle City Movement">RCM</abbr>
+      website in the previous 30 days.
     </p>
   </body>
 </html>
