--- a/website/members/members.html
+++ b/website/members/members.html
@@ -13,7 +13,11 @@
       <h3>Members</h3>
       <p>This is a potential structure for the members page.</p>
       <ul>
-        <li>Log-in / Register</li>
+        <li>
+          <a href="../members/log-in.html" target="main-content">Log-in</a>
+          /
+          <a href="../members/sign-up.html" target="main-content">Sign-up</a>
+        </li>
         <li>My Profile</li>
         <li>Browse Members Database:</li>
         <ul>
