--- a/website/members/sign-up.html
+++ b/website/members/sign-up.html
@@ -4,13 +4,161 @@
     <title>RCM Sign-Up For New Members</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../css/styles.css" />
+    <style>
+      table {
+        font-size: smaller;
+      }
+      th   {
+        /*padding-bottom: 20px;*/
+        padding: 20px 0 0 20px;
+        text-align: left;
+      }
+    </style>
   </head>
   <body class="text-shadow">
-    <h2>
-      Sign-up
-    </h2>
+    <h3>Sign-up</h3>
     <p>
-      This is where new members will sign-up to become a member of RCM.
+      If you'd like to join
+      <abbr title="Recycle City Movement">RCM</abbr>
+      , then here is your opportunity. Before you continue, you may wish read the
+      <a href="../business/terms-and-conditions.html" target="_blank">terms and conditions</a>
+      of using the website.
     </p>
+    <p>
+      If you're okay with the the
+      <a href="../business/terms-and-conditions.html" target="_blank">terms and conditions</a>
+      , then fill out this form. The form has mandatory
+      entries that have an asterisk, '*', in their labels.
+    </p>
+    <p>
+      After completing the following form, hit the submit button at the bottom
+      of the page. At that point, an e-mail will be dispatched to your e-mail
+      address. You'll need to hit the verify link in that e-mail in order for
+      you to actually become a
+      <abbr title="Recycle City Movement">RCM</abbr>
+      member.
+    </p>
+
+    <form>
+      <table>
+        <tr>
+          <th>
+            <label for="alias">* Alias:</label></br>
+            <input type="text" id="alias" name="alias" style="width: 300px"></br>
+          </th>
+          <th>
+            <label for="email">* E-Mail Address:</label></br>
+            <input type="text" id="email" name="email" style="width: 300px"></br>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <label for="fname">First Name:</label></br>
+            <input type="text" id="fname" name="fname" style="width: 300px"></br>
+          </th>
+          <th>
+            <label for="lname">Last Name:</label></br>
+            <input type="text" id="lname" name="lname" style="width: 300px"></br>
+          </th>
+          <th>
+            <label for="mi">M.I.:</label></br>
+            <input type="text" id="mi" name="mi" style="width: 40px"></br>
+          </th>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <th><label>Birthday:</label></br></th>
+          <th>
+            <label for="month">Month:</label></br>
+            <input type="text" id="month" name="month" style="width: 60px"></br>
+          </th>
+          <th>
+            <label for="day">Day:</label></br>
+            <input type="text" id="day" name="day" style="width: 60px">
+          </th>
+          <th>
+            <label for="year">Year:</label></br>
+            <input type="text" id="year" name="year" style="width: 60px"></br>
+          </th>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <th>
+            <label for="phone">Phone Number:</label></br>
+            <input type="text" id="phone" name="phone" style="width: 180px"></br>
+          </th>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <th>
+            <label>Mailing Address:</label></br>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <label for="street-1">Street:</label></br>
+            <input type="text" id="street-1" name="street-1" style="width: 620px"></br>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <label for="street-2">Street (secondary):</label></br>
+            <input type="text" id="street-2" name="street-2" style="width: 620px"></br>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <label for="city">City:</label></br>
+            <input type="text" id="city" name="city" style="width: 620px"></br>
+          </th>
+          <th>
+            <label for="state">State:</label></br>
+            <select id="state" name="state">
+              <option value="alabama">Alabama</option>
+              <option value="alaska">Alaska</option>
+              <option value="arizona">Arizona</option>
+              <option value="arkansas">Arkansas</option>
+            </select>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <label for="city">Zip Code:</label></br>
+            <input type="text" id="zip" name="zip" style="width: 180px"></br>
+          </th>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <th>
+            <input type="checkbox" name="promotion" value="promotion" checked> I am okay with a
+            <abbr title="Recycle City Movement">RCM</abbr>
+            Promotion.
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <input type="checkbox" name="settler" value="settler"> I am looking for a community to live in.
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <input type="checkbox" name="agree" value="agree"> * I have read and understand the
+            <a href="../business/terms-and-conditions.html" target="_blank">terms and conditions</a>
+            of using the
+            <abbr title="Recycle City Movement">RCM</abbr>
+            website.
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <input type="submit" value="Submit">
+          </th>
+        </tr>
+      </table>
+    </form>
   </body>
 </html>
