--- a/website/community/contract/community-biz-plan.html
+++ b/website/community/contract/community-biz-plan.html
@@ -15,11 +15,12 @@
     <h3>Goal and Motivation</h3>
 
     <p>
-      Create a non-profit organization of the highest moral integrity.
-      Improve the lives of everyone through self-empowerment.
+      <li>
+      Create and foster a service-to-other community by
+      through a self-empowerment template and self-responsibility consciousness.
       Encourage growth of the community within self-defined limits.
-      Sustain the community through a business model that funds a unity trust fund
-      and a recycling charity fund.
+      Sustain the community through a business model that funds
+       a unity trust fund and a recycling charity fund.
     </p>
 
     <h3>Non-Profit Organization</h3>
