--- a/website/mission/charter.html
+++ b/website/mission/charter.html
@@ -17,14 +17,8 @@
       its philosophy and moral center.
     </p>
 
-    <h3>
-      Goals of the Recycle City Movement
-    </h3>
-    
-
-    <h3>
-      Establish a Charity Fund
-    </h3>
+    <h3>Goals of the Recycle City Movement</h3>
+    <h3>Establish a Charity Fund</h3>
 
     <p>
       Create and sustain a charity fund which is solely
@@ -72,7 +66,6 @@
       At this phase, the quarterly distributions are also factored in.
       Whatever funds are available after the first two priorities have been met,
       are then distributed by this calculation.
-
     </p>
 
     <p>
@@ -89,9 +82,7 @@
       publishes, on a monthly basis, the charity fund's bank statement onto the website.
     </p>
 
-    <h3>
-      Definition Of A Community
-    </h3>
+    <h3>Definition Of A Community</h3>
     
     <p>
       A location made with people, animals and things, where the people live
@@ -144,9 +135,7 @@
       This volunteer elected staff forms the organization's board of directors of twelve members.
     </p>
 
-    <h3>
-      Propositions, Elections and The Democratic Process
-    </h3>
+    <h3>Propositions, Elections and The Democratic Process</h3>
 
     <p>
       The
@@ -173,9 +162,7 @@
       and the assistant level.
     </p>
 
-    <h3>
-      Open And Transparent
-    </h3>
+    <h3>Open And Transparent</h3>
     <p>
       The business seeks to make its operations open and transparent.
       Financial records are published on the website with the monthly bank statement.
@@ -201,9 +188,7 @@
       Proposed website modifications are done by volunteers at GitHub.com.
     </p>
 
-    <h3>
-      Lawful Consideration
-    </h3>
+    <h3>Lawful Consideration</h3>
     <p>
       Staying within the boundaries set by lawful entities is a primary concern
       of every
@@ -224,10 +209,22 @@
       promotes that its membership recognize in one another their differences
       and similarities, that each individual is responsible for their actions,
       and recognize that each individual is a sovereign being with a unique point-of-view,
-      a cherished life, created by a higher power. In so doing,
+      a precious life, created by a higher power. In so doing,
       <abbr title="Recycle City Movement">RCM</abbr>
-      hopes its members
-      treat each other as equals.
+      hopes its members treat each other as equals.
+    </p>
+    <h3>The Recycling Paradigm</h3>
+    <p>
+      The recycling paradigm is one where the mind shifts its problem-solving
+      abilities to focus on reducing waste. In a long-term perspective,
+      recycling becomes a responsible way to develop technology.
+      It takes a true reflection to consider the future of life and
+      to want it to benefit.
+    </p>
+    <p>
+      Do not all things cycle and travel in circles? Only the center holds.
+      What greater inspiration does one need?
+      The circle is the process, the inspiration, it is us traveling.
     </p>
   </div>
   </body>
