--- a/website/welcome.html
+++ b/website/welcome.html
@@ -10,6 +10,13 @@
     </head>
 
     <body class="text-shadow">
+    <div>
+      <img
+        style="float: left; margin: 20px;"
+        src="./img/flower-life-symbol/flower.png"
+        alt="Formation"
+      />
+    </div>
       <h3>Welcome</h3>
       <p>
         Recycle City Movement (<abbr title="Recycle City Movement">RCM</abbr>)
