--- a/website/members/log-in.html
+++ b/website/members/log-in.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body class="text-shadow">
-    <h2>
-      Log-in
-    </h2>
-    <p>
-      Existing members will have a sign-in form here.
-    </p>
+    <div>
+      <img
+        style="float: left; margin: 20px;"
+        src="../img/sign-in-symbol/sign-in-symbol.png"
+        alt="Formation"
+      />
+    </div>  
+    <h3>Log-in</h3>
+    <p>Existing members will have a sign-in form here.</p>
   </body>
 </html>
