--- a/website/forum/forum.html
+++ b/website/forum/forum.html
@@ -10,6 +10,13 @@
     </head>
 
     <body class="text-shadow">
+    <div>
+      <img
+        style="float: left; margin: 20px;"
+        src="../img/zero-point-symbol/zero-point-symbol.png"
+        alt="Formation"
+      />
+    </div>
       <h3>Forum</h3>
       <p>This is an outline of a potential forum structure:</p>
 
