--- a/website/forum/forum.html
+++ b/website/forum/forum.html
@@ -14,7 +14,7 @@
       <img
         style="float: left; margin: 20px;"
         src="../img/zero-point-symbol/zero-point-symbol.png"
-        alt="Formation"
+        alt="Zero Point"
       />
     </div>
       <h3>Forum</h3>
