--- a/website/members/members.html
+++ b/website/members/members.html
@@ -10,8 +10,16 @@
     </head>
 
     <body class="text-shadow">
+      <div>
+        <img
+          style="float: left; margin: 20px;"
+          src="../img/member-symbol/member-symbol.png"
+          alt="Formation"
+        />
+      </div>
       <h3>Members</h3>
       <p>This is a potential structure for the members page.</p>
+      <br></br>
       <ul>
         <li>
           <a href="../members/log-in.html" target="main-content">Log-in</a>
