--- a/website/members/members.html
+++ b/website/members/members.html
@@ -14,7 +14,7 @@
         <img
           style="float: left; margin: 20px;"
           src="../img/member-symbol/member-symbol.png"
-          alt="Formation"
+          alt="Member"
         />
       </div>
       <h3>Members</h3>
