--- a/website/business/biz.html
+++ b/website/business/biz.html
@@ -10,13 +10,20 @@
     </head>
 
     <body class="text-shadow">
+      <div>
+        <img
+          style="float: left; margin: 20px;"
+          src="../img/business-symbol/business-symbol.png"
+          alt="Business"
+        />
+      </div>
       <h3>
         Business
       </h3>
       <p>
         This is an outline of a potential business navigation structure:
       </p>
-
+      <br></br>
       <ul>
         <li>
           <abbr title="Recycle City Movement">
