--- a/website/business/terms-and-conditions.html
+++ b/website/business/terms-and-conditions.html
@@ -19,5 +19,48 @@
       <abbr title="Recycle City Movement">RCM</abbr>
       website in the previous 30 days.
     </p>
+    <h4>Classes</h4>
+    <p>
+      <abbr title="Recycle City Movement">RCM</abbr>
+      classifies members by their level of responsibility.
+      Responsibility is earned by taking an action that benefits
+      <abbr title="Recycle City Movement">RCM</abbr>
+      or a supported community. There are areas of responsibility that
+      reflect the consequences of the action. These areas have impact
+      on others and
+      <abbr title="Recycle City Movement">RCM</abbr>.
+      The measurement of this impact is how
+      <abbr title="Recycle City Movement">RCM</abbr>
+      ranks responsibility, and classifies, its members.
+    </p>
+    <ul>
+      <li>
+        Fund Supporter</br></br>
+        Has made a provable donation to the 
+        <abbr title="Recycle City Movement">RCM</abbr>
+        charity fund in the previous 30 days. Fund Supporters gain the right to vote on fund
+        distribution proposals.
+      </li>
+    </br>
+      <li>
+        Tech Supporter</br></br>
+        Has contributed to the technology tree by submitting technology documentation
+        that was reviewed and accepted by
+        <abbr title="Recycle City Movement">RCM</abbr>
+        admin or assistant staff.
+      </li>
+    </br>
+      <li>
+        Promoter</br></br>
+        Has publicized 
+        <abbr title="Recycle City Movement">RCM</abbr>
+        in a positive light, and has shared the promotion
+        on a
+        <abbr title="Recycle City Movement">RCM</abbr>
+        forum, and is recognized by a
+        <abbr title="Recycle City Movement">RCM</abbr>
+        forum moderator.
+      </li>
+    </ul>
   </body>
 </html>
