--- a/website/proposals/proposals.html
+++ b/website/proposals/proposals.html
@@ -10,6 +10,13 @@
     </head>
 
     <body class="text-shadow">
+      <div>
+        <img
+          style="float: left; margin: 20px;"
+          src="../img/proposal-symbol/proposal-symbol.png"
+          alt="Proposals"
+        />
+      </div>
       <h3>Proposals</h3>
       <p>There are different kinds of proposals that members can create:</p>
       <ul>
