--- a/website/community/community.html
+++ b/website/community/community.html
@@ -10,8 +10,16 @@
     </head>
 
     <body class="text-shadow">
+      <div>
+        <img
+          style="float: left; margin: 20px;"
+          src="../img/community-symbol/community-symbol.png"
+          alt="Community"
+        />
+      </div>
       <h3>Community</h3>
       <p>The community page is for development and connecting communities.</p>
+      </br></br>
       <h4>Development</h4>
       <p>
         <abbr title="Recycle City Movement">RCM</abbr>
