--- a/website/business/terms-and-conditions.html
+++ b/website/business/terms-and-conditions.html
@@ -22,45 +22,92 @@
     <h4>Classes</h4>
     <p>
       <abbr title="Recycle City Movement">RCM</abbr>
-      classifies members by their level of responsibility.
-      Responsibility is earned by taking an action that benefits
+      classifies members by their level of responsibility. Responsibility is
+      earned by taking an action that benefits
       <abbr title="Recycle City Movement">RCM</abbr>
-      or a supported community. There are areas of responsibility that
-      reflect the consequences of the action. These areas have impact
-      on others and
-      <abbr title="Recycle City Movement">RCM</abbr>.
-      The measurement of this impact is how
+      or a supported community. There are areas of responsibility that reflect
+      the consequences of the action. These areas have impact on others and
+      <abbr title="Recycle City Movement">RCM</abbr>. The measurement of this
+      impact is how
       <abbr title="Recycle City Movement">RCM</abbr>
       ranks responsibility, and classifies, its members.
     </p>
-    <ul>
+    <ol>
       <li>
-        Fund Supporter</br></br>
-        Has made a provable donation to the 
-        <abbr title="Recycle City Movement">RCM</abbr>
-        charity fund in the previous 30 days. Fund Supporters gain the right to vote on fund
-        distribution proposals.
+        <h5>Administrator (Admin)</h5>
+        Was first nominated and then elected to fill one of the four
+        adminstration departments. Each department has three Administrators. The
+        total sum of Administrators is limited to twelve. The twelve
+        Administrators are known as the Board of Directors.
       </li>
-    </br>
       <li>
-        Tech Supporter</br></br>
-        Has contributed to the technology tree by submitting technology documentation
-        that was reviewed and accepted by
+        <h5>Community Founder</h5>
+        Proposed and finalized an accepted
         <abbr title="Recycle City Movement">RCM</abbr>
-        admin or assistant staff.
+        supported community.
       </li>
-    </br>
       <li>
-        Promoter</br></br>
-        Has publicized 
+        <h5>Assistant</h5>
+        Was a Novice or Forum Moderator that was promoted by a
         <abbr title="Recycle City Movement">RCM</abbr>
-        in a positive light, and has shared the promotion
-        on a
+        Admin. The number of Assistants is unlimited.
+      </li>
+      <li>
+        <h5>Forum Moderator</h5>
+        Is a Novice that has volunteered to work as a
+        <abbr title="Recycle City Movement">RCM</abbr>
+        Forum Moderator and was approved by a
+        <abbr title="Recycle City Movement">RCM</abbr>
+        Admin or Assistant. The number of Moderators is unlimited.
+      </li>
+      <li>
+        <h5>Novice</h5>
+        Has been approved as a
+        <abbr title="Recycle City Movement">RCM</abbr>
+        volunteer by
+        <abbr title="Recycle City Movement">RCM</abbr>
+        a Admin or Assistant. The number of Novices is unlimited.
+      </li>
+      <li>
+        <h5>Community Member</h5>
+        A member that belongs to a supported community with a visible profile on
+        the community's website. Community Members and higher ranking members
+        have the right to vote on fund distribution proposals.
+      </li>
+      <li>
+        <h5>Fund Supporter</h5>
+        Has made a provable donation to the
+        <abbr title="Recycle City Movement">RCM</abbr>
+        charity fund in the previous 30 days. Fund Supporters gain the right to
+        vote on fund distribution proposals.
+      </li>
+      <li>
+        <h5>Tech Supporter</h5>
+        Has contributed to the technology tree by submitting technology
+        documentation that was reviewed and accepted by
+        <abbr title="Recycle City Movement">RCM</abbr>
+        Admin or Assistant staff.
+      </li>
+      <li>
+        <h5>Promoter</h5>
+        Has publicized
+        <abbr title="Recycle City Movement">RCM</abbr>
+        in a positive light, and has shared the promotion on a
         <abbr title="Recycle City Movement">RCM</abbr>
         forum, and is recognized by a
         <abbr title="Recycle City Movement">RCM</abbr>
-        forum moderator.
+        Forum Moderator.
       </li>
-    </ul>
+      <li>
+        <h5>Member</h5>
+        Has completed the
+        <abbr title="Recycle City Movement">RCM</abbr>
+        sign-up process.
+      </li>
+    </ol>
+    <h4>Departments</h4>
+    <p>
+      There are four departments which volunteers can choose to work in.
+    </p>
   </body>
 </html>
