--- a/website/members/members.html
+++ b/website/members/members.html
@@ -38,12 +38,13 @@
             <li>Admin</li>
             <li>Community Founder</li>
             <li>Assistant</li>
-            <li>Novice</li>
             <li>Forum Moderator</li>
+            <li>Novice</li>
             <li>Community Member</li>
             <li>Fund Supporter</li>
             <li>Tech Developer</li>
             <li>Promoter</li>
+            <li>Member</li>
           </ol>
         </ul>
       </ul>
