--- a/website/business/biz.html
+++ b/website/business/biz.html
@@ -54,7 +54,11 @@
           </ul>
           <p></p>
         </ul>
-
+        <li>Members</li>
+        <ul>
+          <li><a href="../business/terms-and-conditions.html" target="_blank">Terms and Conditions</a></li>
+          <p></p>
+        </ul>
         <li>Elections</li>
         <ul>
           <li>Previous Elections</li>
