--- a/website/connections/connections.html
+++ b/website/connections/connections.html
@@ -10,10 +10,18 @@
     </head>
 
     <body class="text-shadow">
+      <div>
+        <img
+          style="float: left; margin: 20px;"
+          src="../img/connections-symbol/connections-symbol.png"
+          alt="Connections"
+        />
+      </div>
       <h3>Connections</h3>
-      <p>This is an outline of a potential structure for connections:</p>
-      <p>Connect with others:</p>
+      <p>This is an outline of a potential structure for connections.</p>
+    </br></br>
       <ul>
+        <h5>Connect with others:</h5>        
         <li>Links to external resources</li>
         <li>Contacting members</li>
         <li>Contacting establishments</li>
